--- a/WindowsFormsApplication1/ServerHost.csproj
+++ b/WindowsFormsApplication1/ServerHost.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A1097FD9-3FF1-4087-87CE-773FEC4AB349}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication</RootNamespace>
-    <AssemblyName>WindowsFormsApplication</AssemblyName>
+    <RootNamespace>ServerHost</RootNamespace>
+    <AssemblyName>ServerHost</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
